--- a/ERP_JOSEREIS/Views/Cliente/ClientePessoaFisica.cshtml
+++ b/ERP_JOSEREIS/Views/Cliente/ClientePessoaFisica.cshtml
@@ -5,7 +5,7 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 
-@using (Html.BeginForm("EditPF", "Cliente")) {
+@using (Html.BeginForm("Edit", "Cliente")) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
