--- a/ERP_JOSEREIS/Views/Cliente/DetailsPJ.cshtml
+++ b/ERP_JOSEREIS/Views/Cliente/DetailsPJ.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ERP_JOSEREIS.Models.PessoaFisica>
+﻿@model IEnumerable<ERP_JOSEREIS.Models.PessoaJuridica>
 <p>
     @Html.ActionLink("Nova Cliente PF", "CreatePF")
     @Html.ActionLink("Nova Cliente PJ", "CreatePj")
@@ -7,9 +7,6 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RG)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Rua)
@@ -21,7 +18,7 @@
             @Html.DisplayNameFor(model => model.Bairro)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CPF)
+            @Html.DisplayNameFor(model => model.CNPJ)
         </th>
     </tr>
 
@@ -30,9 +27,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RG)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rua)
@@ -44,7 +38,7 @@
                 @Html.DisplayFor(modelItem => item.Bairro)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CPF)
+                @Html.DisplayFor(modelItem => item.CNPJ)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.IdPessoa }) |
