--- a/ERP_JOSEREIS/Views/Shared/_Layout.cshtml
+++ b/ERP_JOSEREIS/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             <li>@Html.ActionLink("Cidade", "Index", "Cidade")</li>
                             <li>@Html.ActionLink("Estado", "Index", "Estado")</li>
                             <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
+                            <li>@Html.ActionLink("Fornecedor", "Index", "Fornecedor")</li>
                         </ul>
                     </nav>
                 </div>
