trabalho ze reis

--- a/ERP_JOSEREIS/Views/Cliente/Index.cshtml
+++ b/ERP_JOSEREIS/Views/Cliente/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ERP_JOSEREIS.Models.Cliente>
+﻿'   @model IEnumerable<ERP_JOSEREIS.Models.Cliente>
 
 @{
     ViewBag.Title = "Index";
@@ -7,10 +7,7 @@
 <h2>Index</h2>
 
 <p>    
-    @Html.ActionLink("Nova Cliente PF", "CreatePF")
-    @Html.ActionLink("Nova Cliente PJ", "CreatePj")
-    @Html.ActionLink("Details Cliente PF", "DetailsPF")
-    @Html.ActionLink("Details Cliente PJ", "DetailsPJ")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table>
     <tr>
