--- a/ERP_JOSEREIS/Views/Fornecedor/CreatePF.cshtml
+++ b/ERP_JOSEREIS/Views/Fornecedor/CreatePF.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ERP_JOSEREIS.ViewModels.FornecedorViewModel
 
 @{
-    ViewBag.Title = "CreatePJ";
+    ViewBag.Title = "CreatePF";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
