--- a/ERP_JOSEREIS/Views/Fornecedor/FornecedorPessoaFisica.cshtml
+++ b/ERP_JOSEREIS/Views/Fornecedor/FornecedorPessoaFisica.cshtml
@@ -4,7 +4,7 @@
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
-@using (Html.BeginForm("Edit", "Fornecedor")) {
+@using (Html.BeginForm("EditPF", "Fornecedor")) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
